# enigma-project

./: README.md  pyproject.toml  report.md
db/: chroma.sqlite3
src/enigma/: crew.py  main.py
src/enigma/config/: agents.yaml  tasks.yaml  tools.yaml
src/enigma/tools/: custom_tool.py
