[project]
name = "enigma"
version = "0.1.0"
description = "enigma using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
enigma = "enigma.main:run"
run_crew = "enigma.main:run"
train = "enigma.main:train"
replay = "enigma.main:replay"
test = "enigma.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
